--- a/app/design/frontend/live/default/template/page/html/jsfooter.phtml
+++ b/app/design/frontend/live/default/template/page/html/jsfooter.phtml
@@ -1,2 +1,6 @@
 <?php echo $this->getCssJsHtml(); ?>
 <?php echo $this->getChildHtml('js_magentolive') ;?>
+<?php echo $this->getChildHtml('js_productlive') ;?>
+<?php echo $this->getChildHtml('js_categorylive') ;?>
+<?php echo $this->getChildHtml('js_cartlive') ;?>
+<?php echo $this->getChildHtml('js_checkoutlive') ;?>
