--- a/app/design/frontend/live/default/template/checkout/cart/minicart.phtml
+++ b/app/design/frontend/live/default/template/checkout/cart/minicart.phtml
@@ -42,7 +42,7 @@
 <a href="<?php echo $this->helper('checkout/cart')->getCartUrl(); ?>" data-target-element="#header-cart" class="skip-link skip-cart <?php if($_cartQty <= 0): ?> no-count<?php endif; ?>">
     <i class="fa fa-shopping-cart" aria-hidden="true"></i>
     <span class="label"><?php echo $this->__('Cart'); ?></span>
-    <span class="count"><?php echo $_cartQty; ?></span>
+    <span class="count">(<?php echo $_cartQty; ?>)</span>
 </a>
 
 <div id="header-cart" class="block block-cart skip-content">
